Trailing Spaces Update

--- a/Sublime-CSS3/test.css
+++ b/Sublime-CSS3/test.css
@@ -43,6 +43,7 @@
 input:placeholder, input::-webkit-input-placeholder,
 input::-moz-placeholder, input::placeholder,
 input::selection, input::-moz-selection,
+input:-webkit-autofill,
 input::-webkit-search-cancel-button,
 input::-webkit-search-decoration,
 input::-moz-focus-inner,
@@ -60,9 +61,7 @@ input::-ms-ticks-before,
 input::-ms-tooltip,
 input::-ms-track,
 input::-ms-value {
-    position: absolute;
-
-    text-overflow: ellipsis;
+    -webkit-text-fill-color: initial;
 }
 .button-name {
     -webkit-mask-image: -webkit-linear-gradient(left, #000 0, #000 80%, rgba(0,0,0,0) 100%);
@@ -182,8 +181,9 @@ keygen,main,math,menuitem,picture,source,svg,template,track {
     width: calc(100%/3 - 2*1em - 2*1px);
     width: calc((-50vh + 72px)/2 + 24px - 46px);
 }
-@media (min-resolution: 50dppx){}
-@media (-webkit-min-device-pixel-ratio: 2),
+@media (min-resolution: 50dppx),
+       (-o-min-device-pixel-ratio: 5/4),
+       (-webkit-min-device-pixel-ratio: 2),
        (min-device-pixel-ratio: 2),
        (min--moz-device-pixel-ratio: 2),
        (min-resolution: 2dppx){}
@@ -515,3 +515,41 @@ dialog::backdrop{}
 
 @media (scripting:initial-only) { ... }
 @media (scripting:enabled) { ... }
+
+/* http://www.w3.org/TR/css3-fonts/ */
+/* @font-feature-values support not implemented */
+.css3-fonts {
+    font-stretch:
+        ultra-condensed, extra-condensed, condensed, semi-condensed,
+        semi-expanded, expanded, extra-expanded, ultra-expanded;
+    font-synthesis: none;
+    font-feature-settings: "liga", "dlig", "tnum", 'hist';
+    font-language-override: "SRB";
+    font-variant-ligatures: common-ligatures, no-common-ligatures,
+        discretionary-ligatures, no-discretionary-ligatures,
+        historical-ligatures, no-historical-ligatures,
+        contextual, no-contextual;
+    font-variant-position: sub, super;
+    font-kerning: normal;
+    font-variant-caps:
+        small-caps, all-small-caps,
+        petite-caps, all-petite-caps,
+        unicase, titling-caps;
+    font-variant-numeric:
+        lining-nums, oldstyle-nums, proportional-nums, tabular-nums,
+        diagonal-fractions, stacked-fractions,
+        ordinal, slashed-zero;
+    /* partially hightlighted */
+    font-variant-alternates: historical-forms,
+        stylistic(<feature-value-name>),
+        styleset(<feature-value-name> #),
+        character-variant(<feature-value-name> #),
+        swash(<feature-value-name>),
+        ornaments(<feature-value-name>),
+        annotation(<feature-value-name>);
+    font-variant-east-asian:
+        jis78, jis83, jis90, jis04,
+        simplified, traditional,
+        full-width, proportional-width, ruby;
+    unicode-range: U+416, U+400-4ff, U+4??;
+}
